@@ -4,8 +4,9 @@ import common.Person;
 import common.PersonService;
 import common.PersonWithResumes;
 import common.Resume;
-import java.util.Collection;
-import java.util.Set;
+
+import java.util.*;
+import java.util.stream.Collectors;
 
 /*
   Еще один вариант задачи обогащения
@@ -21,7 +22,19 @@ public class Task8 {
   }
 
   public Set<PersonWithResumes> enrichPersonsWithResumes(Collection<Person> persons) {
-    Set<Resume> resumes = personService.findResumes(Set.of());
-    return Set.of();
+    Set<Integer> personIds = persons.stream()
+        .map(Person::id)
+        .collect(Collectors.toSet());
+
+    Set<Resume> allResumes = personService.findResumes(personIds);
+
+    Map<Integer, Set<Resume>> personsIdResumes = allResumes.stream()
+        .collect(Collectors.groupingBy(Resume::personId, Collectors.toSet()));
+
+    return persons.stream()
+        .map(person -> {
+          return new PersonWithResumes(person, personsIdResumes.getOrDefault(person.id(), Collections.emptySet()));
+        })
+        .collect(Collectors.toSet());
   }
 }
